--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,12 @@
+@tailwind base;
+@tailwind utilities;
+@tailwind components;
+
 html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body,
+#__next {
+  @apply h-full;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.green {
-  color: greenyellow;
-}
-
-.red {
-  color: red;
+@layer utilities {
 }
